[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/ShopUI.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/dashing_cape.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/player/skins/cyber_ninja/player_idle.png" type="Texture" id=7]
[ext_resource path="res://themes/Blur.tres" type="Material" id=9]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[node name="ShopUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 5.0
margin_right = 7.0
margin_bottom = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.0
margin_top = -230.0
margin_right = 357.0
margin_bottom = 171.0
script = ExtResource( 3 )

[node name="Blur" type="ColorRect" parent="CanvasLayer/Main"]
material = ExtResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1081.5
margin_top = -408.5
margin_right = 1098.5
margin_bottom = 760.5
color = Color( 1, 1, 1, 0 )

[node name="Background" type="NinePatchRect" parent="CanvasLayer/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -341.5
margin_top = -126.5
margin_right = 341.5
margin_bottom = 362.5
texture = ExtResource( 6 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.5
margin_top = -113.5
margin_right = 386.5
margin_bottom = -51.5
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]===== [color=#5213d1]General Shop[/color] ====="
text = "===== General Shop ====="
scroll_active = false

[node name="CloseButton" type="TextureButton" parent="CanvasLayer/Main"]
margin_left = 27.0
margin_top = 70.0
margin_right = 67.0
margin_bottom = 110.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 11 )
expand = true

[node name="ButtonsControl" type="Control" parent="CanvasLayer/Main"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="SkinsButton" type="TextureButton" parent="CanvasLayer/Main/ButtonsControl"]
anchor_left = 0.209
anchor_top = 0.698
anchor_right = 0.209
anchor_bottom = 0.698
margin_left = 78.64
margin_top = 239.08
margin_right = 206.64
margin_bottom = 303.08
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/Main/ButtonsControl/SkinsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -24.0
margin_right = 46.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 8 )
text = "Skins"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Main/ButtonsControl/SkinsButton"]
position = Vector2( 63, -64 )
scale = Vector2( 7.5, 7.5 )
texture = ExtResource( 5 )

[node name="Skins" type="Control" parent="CanvasLayer/Main"]
margin_left = -108.0
margin_top = 51.0
margin_right = -38.0
margin_bottom = 98.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Main/Skins"]
anchor_right = 21.766
anchor_bottom = 15.255
margin_left = 148.0
margin_top = 83.0
margin_right = -559.62
margin_bottom = -222.985
rect_min_size = Vector2( 500, 355 )
rect_scale = Vector2( 0.8, 0.8 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/Skins/ScrollContainer"]
margin_right = 625.0
margin_bottom = 804.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Main/Skins/ScrollContainer/VBoxContainer"]
margin_right = 625.0
margin_bottom = 800.0
rect_min_size = Vector2( 625, 800 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[color=#ffd703]Cyber Ninja[/color]
A high-tech suit with a sleek metallic design and neon-green features. It is said that the previous owner of this suit possessed the power to summon spirit dragons.
"
text = "Cyber Ninja
A high-tech suit with a sleek metallic design and neon-green features. It is said that the previous owner of this suit possessed the power to summon spirit dragons.
"
scroll_active = false

[node name="Control" type="Control" parent="CanvasLayer/Main/Skins/ScrollContainer/VBoxContainer"]
margin_top = 804.0
margin_right = 625.0
margin_bottom = 804.0

[node name="CyberNinja" type="TextureButton" parent="CanvasLayer/Main/Skins/ScrollContainer/VBoxContainer/Control"]
margin_left = 650.0
margin_top = -685.0
margin_right = 750.0
margin_bottom = -635.0
rect_min_size = Vector2( 100, 50 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="CanvasLayer/Main/Skins/ScrollContainer/VBoxContainer/Control/CyberNinja"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -16.0
margin_right = 38.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 9 )
text = "Unlock"
align = 1

[node name="Sprite" type="Sprite" parent="CanvasLayer/Main/Skins/ScrollContainer/VBoxContainer/Control"]
position = Vector2( 695, -745 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/Main/CloseButton" to="CanvasLayer/Main" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/ButtonsControl/SkinsButton" to="CanvasLayer/Main" method="_on_SkinsButton_pressed"]
